# app/Http/Controllers/Annotations/PaiementAnnotationController.php
@@ -26,6 +26,38 @@ namespace App\Http\Controllers\Annotations ;
  *
 
  * @OA\POST(
+ *     path="/api/notification.php",
+ *     summary=" Payment Notification",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="201", description="Created successfully"),
+ * @OA\Response(response="400", description="Bad Request"),
+ * @OA\Response(response="401", description="Unauthorized"),
+ * @OA\Response(response="403", description="Forbidden"),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 properties={
+ *                     @OA\Property(property="transaction_id", type="string"),
+ *                     @OA\Property(property="status", type="string"),
+ *                     @OA\Property(property="amount", type="string"),
+ *                     @OA\Property(property="currency", type="string"),
+ *                 },
+ *             ),
+ *         ),
+ *     ),
+ *     tags={"paiement"},
+*),
+
+
+ * @OA\POST(
  *     path="/api/payment",
  *     summary="faire un payement",
  *     description="",
